@@ -1,4 +1,4 @@
-.TH HASHDEEP "1" "v3.0 \- 10 May 2008" "AFOSI" "United States Air Force"
+.TH HASHDEEP "1" "v3.2 \- RBF DATE 2009" "AFOSI" "United States Air Force"
 
 .SH NAME
 hashdeep \- Compute, compare, or audit multiple message digests
